--- a/weather.css
+++ b/weather.css
@@ -3,35 +3,43 @@
     margin:0;
 }
 
+:root{
+    --primary-color:#212121;
+    --secondary-color:#c1d0ee;
+    
+}
+
+.dark-theme{
+    --primary-color:#edf2fc;
+    --secondary-color:#212121;
+}
+
 .container{
     width:100%;
     height:100vh;
-    background-color:rgb(172, 27, 27);
+    background-color:var(--secondary-color);
     display:flex;
     justify-content: center;
     align-items: center;
 }
 
 .weather-container{
-    color: white;
+    color:var(--primary-color);
 }
 
 .temp{
     font-size: 5rem;
 }
-.time-location .location{
-    font-size: 2rem;
-}
 .time-location{
-    font-size: 1rem;
+    font-size: 1.5rem;
+    color:var(--primary-color);
 }
 .condition{
-    margin: 1rem;
+    margin: .5rem;
+    font-size: 1.5rem;
+    color:var(--primary-color);
 }
 
-.condition .icon{
-    color: aliceblue;
-}
 
 nav{
     margin-top: 35rem;
@@ -42,10 +50,10 @@ nav{
     padding: .5rem;
     outline: none;
     border: none;
-    color:white;
+    color:var(--primary-color);
     background-color: transparent;
     font-size: 1.1rem;
-    border-bottom: 1.5px solid white ;
+    border-bottom: 1.5px solid var(--primary-color) ;
 }
 
 .btn{
@@ -57,4 +65,18 @@ nav{
     border: none;
     cursor: pointer;
     border-radius: 10rem;
+    background-color:var(--primary-color) ;
+    color:var(--secondary-color) ;
+}
+
+.change-mode{
+    position: absolute;
+    top: 7rem;
+    right: 30%;  
+}
+
+#icon{
+    height:2rem;
+    width: 2rem;
+    cursor: pointer;
 }
